# backlog-cockpit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.json  harvest.py  llm.py  pyproject.toml
.github/workflows/: test.yml
backlog_cockpit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: RETHINK.md
tests/: test_harvest.py
web/: README.md  index.html  package-lock.json  package.json
web/public/: data.json
web/src/: App.tsx  index.css  types.ts
web/src/components/: FilterChips.tsx  FocusTiles.tsx  GoalCard.tsx  TaskRow.tsx  TopBar.tsx
web/src/hooks/: useCountUp.ts  useTheme.ts
