[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "backlog-cockpit"
dynamic = ["version"]
description = "Turn the trail your Claude Code agent leaves behind into a live, prioritized task board."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Tyler Gorman" }]
keywords = ["obsidian", "markdown", "claude-code", "task", "backlog", "dashboard", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Office/Business :: Scheduling",
]
dependencies = []   # standard library only

[project.urls]
Homepage = "https://github.com/aargeta/backlog-cockpit"
Demo = "https://backlog-cockpit-demo.pages.dev"

[project.scripts]
backlog-cockpit = "harvest:main"

[tool.setuptools]
py-modules = ["harvest", "llm"]

[tool.setuptools.dynamic]
version = { attr = "harvest.VERSION" }
